# chat-bot-clean

./: .gitignore  CLAUDE.md  README.md  bot.py  gemini_client.py  main.py  mcp_server.py  pyproject.toml  sawai_profile.txt  search_mcp_server.py  test_mcp.py
